[package]
name = "tuna-compiler"
version = "0.1.0"
authors = ["jermdroui <jerm@conder.systems>"]
edition = "2018"
license = "BSD-3-Clause"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes ="0.5"
rust-crypto = "0.2"
ring = "0.16.20"
tuna-interpreter={path="../interpreter"}
pest = "2.1.0"
pest_derive = "2.1.0"
tokio = { version = "1", features = ["full"] }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
json = "0.12"
futures = "0.3.5"
[dev-dependencies]
rand={version="0.8", features=["std", "std_rng"]}
rand_core="0.6"
