[package]
name = "app"
version = "0.1.0"
authors = ["jermdroui <jerm@conder.systems>"]
edition = "2018"
license = "BSD-3-Clause"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes ="0.5"
rust-crypto = "0.2"
ring = "0.16.20"
tokio = { version = "1", features = ["full"] }
tuna-interpreter={path="../interpreter"}
ts-rs={git="https://github.com/Conder-Systems/ts-rs", branch="main"}

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
json = "0.12"
futures = "0.3.5"